openmediavault (0.5.30) stable; urgency=low

  * Mantis 0000937: Error opening FTP-transfer log.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 08 Jan 2014 12:06:31 +0100

openmediavault (0.5.29) stable; urgency=low

  * Update locales.
  * Refactor JS overrides to prevent ECMAScript6 compatibility problems.
  * Mantis 0000936: Plugin-Section - Sortable Collums: sorting is not working
    across more than one side.
  * Mantis 0000940: Incorrect spelling.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 07 Jan 2014 12:13:39 +0100

openmediavault (0.5.28) stable; urgency=low

  * Update locales.
  * Mantis 0000930: Display additional columns in 'System - Updates' and
    'System - Plugins'. Bug http://www.sencha.com/forum/showthread.php?251392-4.1.3-Renderer-of-hidden-column-can-cause-undesired-effect
    seem to be fixed in ExtJS 4.2.2.
  * Mantis 0000932: Enable single-click node expansion in navigation tree.

 -- Volker Theile <volker.theile@openmediavault.org>  Wed, 01 Jan 2014 16:40:30 +0100

openmediavault (0.5.27) stable; urgency=low

  * Update locales.
  * Various code improvements.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 20 Dec 2013 18:49:42 +0100

openmediavault (0.5.26) stable; urgency=low

  * Update locales.
  * Add chinese (China) language support.
  * Various code improvements.
  * Add 'System | Update Manager | Settings' page.
  * Mantis 0000923: Filesystems does not show new filesystems.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 09 Dec 2013 23:15:07 +0100

openmediavault (0.5.25) stable; urgency=low

  * Update locales.
  * Various code improvements.
  * Set filesystem blocks reserved for the super-user to 0% for EXT3/4. See
    http://forums.openmediavault.org/viewtopic.php?f=10&t=3047 how to tune
    existing filesystems.
  * Fix bug in RPC Config::applyChanges().
  * Mantis 0000910: Suppot for /dev/bcache0 block device.
  * Mantis 0000915: Error In Raid Management page.